# land-intelligence-backend

./: .env.example  .gitignore  README.md  SETUP.md  WINDOWS_SETUP.md  alembic.ini  c  celerybeat-schedule.dir  constraints.txt  create_config_files.sh  create_files1.sh  create_gitkeep_files.sh  create_structure.sh  hash_gen.py  pyproject.toml  requirements-dev.txt  requirements.txt  scan_stubs.py  task-progress.md  verify_structure.py
.scripts/: fix_cloud_test.py
alembic/: env.py  script.py.mako
alembic/versions/: 032eaed0a76e_20260713_153450_merge_migrations.py  315a1f2b3c4d_spatial_optimization.py  63dbbad0300d_20260626_113036_change_failed_login_attempts_to_integer_.py  73e159f607a7_20260721_095835_merge_upi_rename_and_title_deed_removal.py  7b9c2d1e4f60_20260622_130000_backup_jobs.py  8a7b6c5d4e3f_recreate_users_table_with_uuid.py  929fabf1334d_20260330_113558_phase2_core_domain.py  a1b2c3d4e5f6_clean_postgresql_schema.py  a1b2c3d4e5f7_add_unique_constraint_to_tax_payment_reference.py  a3bfa1088a59_20260629_114057_.py  ac60d369ef05_20260626_113628_change_valuation_date_from_string_to_.py  b2c3d4e5f6a7_rename_parcel_number_to_upi.py  c2341b14cb56_20260616_162818_initial_schema_full.py  e8f7a6b5c4d3_add_metadata_column_to_documents.py  remove_title_deed_number_from_parcels.py  simplify_parish_entity_remove_unused_columns.py
ananie.vscode/: setting.json
app/: dependencies.py  main.py  test_final.py
app/api/: auth_dependencies.py  logging_dependencies.py
docs/: WINDOWS_SERVICE.md
land-intelligence-frontend/: .env.example  .gitignore  CONVENTIONS.md  index.html  package-lock.json  package.json  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  task-progress.md  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
mypy_html/: index.html
mypy_report/: index.txt
scripts/: README.md  install-nssm.ps1  install-service.bat  install-service.ps1  test-service.ps1
tests/: conftest.py
(+426 files in other folders)
