[tool.poetry]
name = "land-intelligence-system"
version = "1.0.0"
description = "Land Intelligence & Stewardship System - GIS-enabled property management for church lands"
authors = ["Church IT Department <it@church.org>"]
readme = "README.md"
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
geoalchemy2 = "^0.14.3"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydantic-settings = "^2.1.0"
pymysql = "^1.1.0"
aiomysql = "^0.2.0"
cryptography = "^42.0.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
shapely = "^2.0.2"
pyproj = "^3.6.1"
qrcode = {extras = ["pil"], version = "^7.4.2"}
pillow = "^10.2.0"
pyyaml = "^6.0.1"
aiofiles = "^23.2.1"
httpx = "^0.26.0"
google-cloud-storage = "^2.14.0"
b2sdk = "^1.30.0"
celery = {extras = ["redis"], version = "^5.3.6"}
redis = "^5.0.1"
schedule = "^1.2.1"
reportlab = "^4.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
faker = "^22.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=app --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"
